// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Package transformer should work with an empty package.json for backend 1`] = `
Object {
  "devDependencies": Object {
    "eslint": "^7.27.0",
    "eslint-plugin-import": "^2.23.4",
    "eslint-plugin-jest": "^24.3.6",
    "eslint-plugin-prettier": "^3.4.0",
    "lint-staged": "^11.0.0",
    "prettier": "^2.3.0",
  },
  "eslintConfig": Object {
    "env": Object {
      "es6": true,
      "jest": true,
      "mocha": true,
      "node": true,
    },
    "extends": Array [
      "eslint:recommended",
      "plugin:jest/recommended",
    ],
    "parserOptions": Object {
      "ecmaVersion": 9,
      "sourceType": "module",
    },
    "plugins": Array [
      "prettier",
      "import",
      "jest",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "lint-staged": Object {
    "*.{js,jsx}": Array [
      "eslint",
      "jest --bail --findRelatedTests",
    ],
  },
  "metapak": Object {
    "data": Object {
      "eslintConfigType": "backend",
      "files": "lol.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": Object {
    "lint": "eslint lol.js",
    "pre-commit-lint": "lint-staged",
    "prettier": "prettier --write lol.js",
  },
}
`;

exports[`Main Package transformer should work with an empty package.json for create-react-app 1`] = `
Object {
  "devDependencies": Object {
    "eslint": "5.16.0",
    "eslint-plugin-prettier": "^3.4.0",
    "lint-staged": "^11.0.0",
    "prettier": "^2.3.0",
  },
  "eslintConfig": Object {
    "extends": "react-app",
    "plugins": Array [
      "prettier",
    ],
    "rules": Object {
      "prettier/prettier": "error",
    },
  },
  "lint-staged": Object {
    "*.{js,jsx}": Array [
      "eslint",
      "jest --bail --findRelatedTests",
    ],
  },
  "metapak": Object {
    "data": Object {
      "eslintConfigType": "create-react-app",
      "files": "lol.js",
    },
  },
  "prettier": Object {
    "printWidth": 80,
    "proseWrap": "always",
    "semi": true,
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": Object {
    "lint": "eslint lol.js",
    "pre-commit-lint": "lint-staged",
    "prettier": "prettier --write lol.js",
  },
}
`;
